# VOYIS

./: README.md
dis/: CMakeLists.txt
dis/App1/: CMakeLists.txt  ImgGen.cpp  ImgGen.h  app1.cpp
dis/App2/: CMakeLists.txt  FeatureExtractor.cpp  FeatureExtractor.h  app2.cpp
dis/App3/: CMakeLists.txt  ImgDBManager.cpp  ImgDBManager.h  app3.cpp
dis/Lib/: CMakeLists.txt  SharedMemory.cpp  SharedMemory.h
